--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "Plus Jakarta Sans";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.custom-scrollbar::-webkit-scrollbar {
+  @apply bg-[#D9D9D9] w-[15px];
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  @apply bg-[#D9D9D9] w-[15px] rounded-[2px];
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  @apply bg-[#FFF] w-[1px] rounded-[2px];
 }
