--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "bootstrap/dist/css/bootstrap.min.css";
 
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
+
+/* .jakartasans {
+  font-family: "Plus Jakarta Sans", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+} */
 
 body {
   margin: 0;
@@ -19,4 +27,8 @@ body {
 }
 .custom-scrollbar::-webkit-scrollbar-track {
   @apply bg-[#FFF] w-[1px] rounded-[2px];
+}
+
+.dropdown-toggle::after {
+  display: none !important;
 }
